# infinite-brainstorm

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  Trunk.toml  board.json  board.json.example  rust-toolchain.toml  styles.css
.claude/skills/infinite-brainstorm/: SKILL.md  board.schema.json
.claude/skills/infinite-brainstorm/templates/: adr-log.json  c4-component.json  c4-container.json  c4-context.json  deployment.json  dfd-context.json  erd-crows-foot.json  event-driven-flow.json  flowchart.json  hexagonal-ports-adapters.json  kanban.json  microservices-service-map.json  mind-map.json  pros-cons.json  swot.json  timeline.json  uml-activity.json  uml-class.json  uml-sequence.json  uml-state-machine.json
.github/workflows/: ci.yml
crates/brainstorm-types/: Cargo.toml
crates/brainstorm-types/src/: lib.rs
docs/solutions/bugs/: brainstorm-command-overwrites-board.md  file-watcher-camera-reset.md  image-paste-loading-stuck.md  orphaned-image-assets.md
docs/solutions/feature-patterns/: leptos-undo-redo-history-pattern.md
docs/solutions/features/: image-markdown-nodes.md
docs/solutions/integration-issues/: tauri-trunk-file-watcher-issues.md
examples/arch-gallery/: board.json
examples/self-architecture/: board.json
plans/: 2026-05-29-deep-analysis-and-improvement-plan.md  2026-05-30-p3.4-hidpi-minimap-export-snap.md  2026-06-12-osint-gotham-reskin.md  2026-06-14-backlog-roadmap.md  2026-06-14-ib-backlog.workflow.js  osint-gotham-reskin.workflow.js  review-reskin.workflow.js
scripts/: brainstorm
src/: app.rs  canvas.rs  history.rs  interaction.rs  lib.rs  main.rs  state.rs
src-tauri/: Cargo.toml  board.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/tests/: atomic_save.rs  board_roundtrip.rs  watcher.rs
src-tauri/tests/fixtures/: golden_board.json
src/components/: error_banner.rs  image_modal.rs  markdown_modal.rs  markdown_overlays.rs  minimap.rs  mod.rs  node_editor.rs  search_overlay.rs
