[package]
name = "infinite-brainstorm-ui"
version = "0.1.0"
edition = "2021"

[lib]
name = "infinite_brainstorm_ui"
path = "src/lib.rs"

[[bin]]
name = "infinite-brainstorm-ui"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "TextMetrics",
    "MouseEvent",
    "WheelEvent",
    "KeyboardEvent",
    "DomRect",
    "HtmlInputElement",
    "HtmlElement",
    "CssStyleDeclaration",
    "HtmlImageElement",
    "HtmlTextAreaElement",
    "Url",
    "Navigator",
    "Clipboard",
    "Storage",
] }
pulldown-cmark = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
gloo-timers = { version = "0.3", features = ["futures"] }
uuid = { version = "1", features = ["v4", "js"] }

[workspace]
members = ["src-tauri"]
