[package]
name = "infinite-brainstorm"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "infinite_brainstorm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Release profile: size-optimized binary with full LTO, single codegen unit,
# stripped symbols, and abort-on-panic. NOTE: Cargo only honors `[profile.*]`
# from the workspace ROOT manifest, so this block is mirrored there (and is what
# actually takes effect); it is duplicated here for documentation/standalone-
# build parity. Release-only — dev/test profiles still unwind, so tests run.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
tokio = { version = "1", features = ["sync"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
scraper = "0.21"
uuid = { version = "1", features = ["v4"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
base64 = "0.22"
dirs = "5"
urlencoding = "2"
clap = { version = "4", features = ["derive"] }
brainstorm-types = { path = "../crates/brainstorm-types" }

